--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "api-nodelib",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "API Node library",
   "license": "MIT",
   "author": "Antoine Aumjaud",
+  "main":  "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "#jasmine --config=test/jasmine.json"
   },
